--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -3,13 +3,17 @@
 {{#if results.length}}
 
 {{#each results}}
+
+
+</script>
   <div class="mx-auto px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
     <!-- Product -->
     <div class="lg:grid lg:grid-cols-7 lg:grid-rows-1 lg:gap-x-8 lg:gap-y-10 xl:gap-x-16">
       <!-- Product image -->
       <div class="lg:col-span-4 lg:row-end-1">
         <div class="aspect-h-3 aspect-w-4 overflow-hidden rounded-lg bg-gray-100">
-          <img src="/images/1981-Datsun-B-210.jpg" alt="Sample of 30 icons with friendly and fun details in outline, filled, and brand color styles." class="object-cover object-center">
+          <img src="/images/{{filename}}" alt="Sample of 30 icons with friendly and fun details in outline, filled, and brand color styles." class="object-cover object-center">
+          {{!-- <p>{{filename}}</p> --}}
         </div>
       </div>
 
@@ -46,7 +50,7 @@
           </div>
         </div>
 
-        <p class="mt-6 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem facilis rerum inventore atque sequi, distinctio ducimus, saepe itaque voluptatibus quia quo natus eligendi, iste cupiditate.</p>
+        <p class="mt-6 text-gray-500"> {{review1}}</p>
 
   
 
@@ -164,7 +168,7 @@
                 <p class="sr-only">5 out of 5 stars</p>
 
                 <div class="prose prose-sm mt-4 max-w-none text-gray-500">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quia quisquam quibusdam quis obcaecati quam animi officiis sit sequi vitae.</p>
+                  <p> {{review1}}</p>
                 </div>
               </div>
             </div>
@@ -197,13 +201,13 @@
                 <p class="sr-only">5 out of 5 stars</p>
 
                 <div class="prose prose-sm mt-4 max-w-none text-gray-500">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, voluptatem. Et, impedit explicabo expedita placeat quaerat pariatur repellendus doloribus harum? Iste dignissimos molestiae sed deserunt? Corrupti minus hic vel asperiores, perspiciatis illum! Non, provident. Ducimus illum odio magnam facilis distinctio consectetur repellendus iure eveniet! Aliquam iusto accusamus corporis quod voluptates!</p>
+                  <p> {{review2}}</p>
                 </div>
               </div>
             </div>
 
             <!-- More reviews... -->
-          </div>
+          
         </div>
       </div>
     </div>
