--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -4,8 +4,8 @@
 
 {{#each results}}
 
+<script> const </script>
 
-</script>
   <div class="mx-auto px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
     <!-- Product -->
     <div class="lg:grid lg:grid-cols-7 lg:grid-rows-1 lg:gap-x-8 lg:gap-y-10 xl:gap-x-16">
@@ -13,7 +13,7 @@
       <div class="lg:col-span-4 lg:row-end-1">
         <div class="aspect-h-3 aspect-w-4 overflow-hidden rounded-lg bg-gray-100">
           <img src="/images/{{filename}}" alt="Sample of 30 icons with friendly and fun details in outline, filled, and brand color styles." class="object-cover object-center">
-          {{!-- <p>{{filename}}</p> --}}
+          <p>{{filename}}</p>
         </div>
       </div>
 
@@ -50,7 +50,7 @@
           </div>
         </div>
 
-        <p class="mt-6 text-gray-500"> {{review1}}</p>
+        <p class="mt-6 text-gray-500"> </p>
 
   
 
@@ -144,7 +144,7 @@
                 <img src="/images/owlsmaincircle.png" alt="" class="h-10 w-10 rounded-full bg-gray-100">
               </div>
               <div class="py-10">
-                <h3 class="font-medium text-gray-900">Bird Bird Lorem</h3>
+                <h3 class="font-medium text-gray-900">Bird Bird Lorem </h3>
                 <p><time datetime="2021-07-16">July 16, 2021</time></p>
 
                 <div class="mt-4 flex items-center">
@@ -168,7 +168,7 @@
                 <p class="sr-only">5 out of 5 stars</p>
 
                 <div class="prose prose-sm mt-4 max-w-none text-gray-500">
-                  <p> {{review1}}</p>
+                  <p> {{review1}} {{highlights}} </p>
                 </div>
               </div>
             </div>
@@ -201,7 +201,7 @@
                 <p class="sr-only">5 out of 5 stars</p>
 
                 <div class="prose prose-sm mt-4 max-w-none text-gray-500">
-                  <p> {{review2}}</p>
+                  <p>{{review2}} </p>
                 </div>
               </div>
             </div>
